# PMA-Core

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  PLANS.md  PROJECT.md  README.md  START_BUILD.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/workflows/: ci.yml  nightly.yml  release.yml  weekly.yml
.pi/extensions/pma-core/: index.ts
.pi/sessions/: README.md  pma-core-build-session.jsonl  task-001-bootstrap.jsonl
adapters/mcp/: README.md  package-lock.json  package.json
adapters/mcp/src/: catalog.ts  cli.ts  pma-client.ts  server.ts
adapters/mcp/test/: mcp.test.ts
adapters/pi/: LICENSE  package-lock.json  package.json
adapters/pi/src/: client.ts  controller.ts  index.ts
adapters/pi/test/: lifecycle.test.ts  smoke.test.ts
cmake/: README.md
docs/: README.md
docs/01-foundation/: DECISIONS.md  GLOSSARY.md  GOALS_AND_NON_GOALS.md  OPEN_QUESTIONS.md
docs/02-architecture/: CONTEXT_AND_PROVENANCE.md  KNOWLEDGE_GRAPH.md  MEMORY_LIFECYCLE.md  MEMORY_PROCESSING.md  PORTABLE_REFERENCES.md  SYSTEM_ARCHITECTURE.md
docs/03-storage/: MIGRATIONS_BACKUP_RECOVERY.md  SQLITE_CORE.md  VECTOR_PROJECTIONS.md
docs/04-interfaces/: CONTEXT_PACKET_AND_SLICE.md  MCP_ADAPTER.md  MODEL_PROVIDERS.md  PI_EXTENSION.md  SERVICE_PROTOCOL.md  TRANSFORMERS_JS_PROVIDER.md
docs/05-implementation/: DEPENDENCIES_AND_BUILD.md  ERRORS_JOBS_EVENTS.md  OBSERVABILITY.md  REPOSITORY_LAYOUT.md  SECURITY_AND_PRIVACY.md
docs/06-testing/: FUNCTIONAL_TESTS.md  LLM_STRESS_TEST.md  PERFORMANCE_TESTS.md  PORTABILITY_AND_RESILIENCE.md  TEST_STRATEGY.md
docs/07-delivery/: COMPATIBILITY_AND_LIMITATIONS.md  DEFINITION_OF_DONE.md  MIGRATION_MATRIX.md  RELEASE_AND_VERSIONING.md  ROADMAP.md  SECURITY_REVIEW_0.1.0.md  UPGRADE_AND_RECOVERY.md  WORK_PACKAGES.md
docs/decisions/: ADR-0001-SQLITE-AUTHORITATIVE.md  ADR-0002-VECTOR-PROJECTIONS.md  ADR-0003-PROCESS-API.md  ADR-0004-CONTEXT-NOT-OWNERSHIP.md  ADR-0005-EXTERNAL-PROVIDERS.md  ADR-0006-CLAIMS-FIRST-GRAPH.md  ADR-0007-DETERMINISTIC-TESTS.md  README.md
docs/references/: EXTERNAL_REFERENCES.md
include/pma-internal/: graph.hpp  lifecycle.hpp  maintenance.hpp  provider_process.hpp  retrieval.hpp  service.hpp  storage.hpp  vectors.hpp
plans/: 001-bootstrap.md  002-sqlite-foundation.md  003-service-protocol.md  004-evidence-and-graph.md  005-lifecycle-processing.md  006-vector-projections.md  007-node-provider.md  008-retrieval-and-context.md  009-pi-extension.md  010-mcp-adapter.md  011-test-and-stress-harness.md  012-hardening-and-release.md  013-pi-vector-lifecycle.md
protocol/mcp/: initialize.request.json  learn.request.json
protocol/pma-service/: v1.md
protocol/pma-service/fixtures/: initialize.request.json  initialize.response.json  version-mismatch.response.json
protocol/provider/: v1.md
protocol/provider/fixtures/: capabilities.request.json  initialize.request.json
protocol/schemas/: error.schema.json  json-rpc-request.schema.json  mcp-tool-result.schema.json  provider-runtime.schema.json
providers/: package-lock.json  package.json
providers/node/: MODEL_SELECTION.md  package.json  tsconfig.json
providers/node/src/: adapters.ts  cli.ts  index.ts  runtime.ts  server.ts  structured.ts  types.ts
providers/node/test/: model-smoke.test.ts  provider.test.ts  smoke.test.ts
scripts/: create-pi-bundle.mjs
src/application/: graph.cpp  lifecycle.cpp  maintenance.cpp  service.cpp
src/main/: main.cpp
src/platform/: provider_process.cpp
src/retrieval/: retrieval.cpp
src/storage/: storage.cpp
src/transport/: stdio.cpp
src/vectors/: vectors.cpp
tasks/: 001-BOOTSTRAP.md  002-SQLITE-FOUNDATION.md  003-SERVICE-PROTOCOL.md  004-EVIDENCE-AND-GRAPH.md  005-LIFECYCLE-PROCESSING.md  006-VECTOR-PROJECTIONS.md  007-NODE-PROVIDER.md  008-RETRIEVAL-AND-CONTEXT.md  009-PI-EXTENSION.md  010-MCP-ADAPTER.md  011-TEST-AND-STRESS-HARNESS.md  012-HARDENING-AND-RELEASE.md  README.md  TASK_TEMPLATE.md
tests/graph/: graph_test.cpp
tests/integration/: learning_recall_simulation_test.cpp  release_gate_test.cpp
tests/lifecycle/: lifecycle_test.cpp
tests/llm-simulation/: package-lock.json  package.json
tests/llm-simulation/reports/: LEARNING_RECALL_REPORT.md
tests/llm-simulation/src/: cli.ts  harness.ts  index.ts
tests/llm-simulation/test/: harness.test.ts  smoke.test.ts
tests/performance/: pma_benchmark.cpp
tests/protocol/: service_test.cpp  stdio.integration.mjs
tests/providers/: fake-provider.mjs  provider_process_test.cpp
tests/retrieval/: retrieval_test.cpp
tests/storage/: maintenance_test.cpp  storage_test.cpp
tests/unit/: smoke_test.cpp
tests/vectors/: vector_test.cpp
